--- a/Visual Studio/Billard/Billard.vcxproj.filters
+++ b/Visual Studio/Billard/Billard.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Ball.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TableBillard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Queue.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BillardSource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TableBillard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
