Code cleanup And refactoring

--- a/Visual Studio/Billard/Billard.vcxproj
+++ b/Visual Studio/Billard/Billard.vcxproj
@@ -133,13 +133,13 @@
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="BillardSource.cpp" />
     <ClCompile Include="Queue.cpp" />
-    <ClCompile Include="TableBillard.cpp" />
+    <ClCompile Include="Table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="BillardSource.h" />
     <ClInclude Include="Queue.h" />
-    <ClInclude Include="TableBillard.h" />
+    <ClInclude Include="Table.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
