--- a/Visual Studio/Billard/Billard.vcxproj.filters
+++ b/Visual Studio/Billard/Billard.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Ball.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TableBillard.cpp">
+    <ClCompile Include="Table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -38,7 +38,7 @@
     <ClInclude Include="BillardSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TableBillard.h">
+    <ClInclude Include="Table.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
