--- a/Visual Studio/Billard/Billard.vcxproj
+++ b/Visual Studio/Billard/Billard.vcxproj
@@ -132,12 +132,14 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="BillardSource.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Queue.cpp" />
     <ClCompile Include="Table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="BillardSource.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Table.h" />
   </ItemGroup>
